--- a/_config.yml
+++ b/_config.yml
@@ -1,64 +1,57 @@
-# Site
-repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
+### Site
+repository: alirezadizaji/alirezadizaji.github.io
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
-# Content configuration version
+### Content configuration version
 version: 2
 
-# Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
+### Personal info
+name: Alireza Dizaji
+# title: Your job title
+email: alirezadizaji24@gmail.com
 # email_title: Email (Email title override)
-phone: Your phone number (optional)
+# phone: Your phone number (optional)
 # phone_title: Phone (Phone title override)
-website: Your website (eg. https://google.com)(optional)
+# website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
 
-# Dark Mode (true/false/never)
+### Dark Mode (true/false/never)
 darkmode: false
 
-# Social links
-twitter_username: jekyllrb
-github_username:  jekyll
-stackoverflow_username: "00000001"
-dribbble_username: jekyll
-facebook_username: jekyll
-flickr_username: jekyll
-instagram_username: jekyll
-linkedin_username: jekyll
-xing_username: jekyll
-pinterest_username: jekyll
-youtube_username: jekyll
-orcid_username: 0000-0000-0000-0000
-googlescholar_username: D847cGsAAAAJ
+### Social links
+github_username:  alirezadizaji
+linkedin_username: alireza-dizaji-43a634194
 
-# Additional icon links
-additional_links:
-- title: Link name
-  icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-  url: Link url (eg. https://google.com)
+### Additional icon links
+# additional_links:
+# - title: Link name
+#   icon: Font Awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+#   url: Link url (eg. https://google.com)
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
 
-# Google Analytics and Tag Manager
-# Using more than one of these may cause issues with reporting
+### Google Analytics and Tag Manager
+### Using more than one of these may cause issues with reporting
 # gtm: "GTM-0000000"
 # gtag: "UA-00000000-0"
 # google_analytics: "UA-00000000-0"
 
-# About Section
+### About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_profile_image: images/me.jpeg
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
+  **CV: [PDF](https://alirezadizaji.github.io/files/CV.pdf)**
 
-  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
-    - Lists
-    - Tables
-    - <a href="google.com">Links</a>
-    - Images ![alt text](/images/landscape-trees.jpg "Trees")
+  My name is Alireza Dizaji and currently I am a B.Sc. student at **Sharif University of Technology**, **Computer Engineering** field.
+  My research career has begun since April 2020, when I joined the [**DML lab**](http://www.dml.ir/) focusing on the applications of
+  deep learning methods within a **computer vision** and **reinforcement learning** project, under supervision of Prof. Rabiee. since April 2021,
+  I have joined [**AI-Med company**](https://www.linkedin.com/company/aimedic/mycompany/) where I have been researching deep learning methods with a focus
+  on **Medical Image Analysis**, under supervision of Prof. Rabiee.
+  My research interests are **computer vision**, **machine learning**, **reinforcement learning**, **autonomous driving** and **AI for healthcare**.
+  
+  
+  (**this website is still under construction...**)
 
 content:
   - title: Projects # Title for the section
@@ -111,11 +104,11 @@ content:
 
       Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
 
-# Footer
+### Footer
 footer_show_references: true
 # references_title: References on request (Override references text)
 
-# Build settings
+### Build settings
 # theme: modern-resume-theme (Use this is you are hosting your resume yourself)
 # remote_theme: sproogen/modern-resume-theme (Use this if you are hosting your resume on GitHub)
 
