--- a/_config.yml
+++ b/_config.yml
@@ -43,12 +43,14 @@ about_profile_image: images/me.jpeg
 about_content: | # this will include new lines to allow paragraphs
   **CV: [PDF](https://alirezadizaji.github.io/files/CV.pdf)**
 
-  My name is Alireza Dizaji and currently I am a B.Sc. student at **Sharif University of Technology**, **Computer Engineering** field.
-  My research career has begun since April 2020, when I joined the [**DML lab**](http://www.dml.ir/) focusing on the applications of
-  deep learning methods within a **computer vision** and **reinforcement learning** project, under supervision of Prof. Rabiee. since April 2021,
-  I have joined [**AI-Med company**](https://www.linkedin.com/company/aimedic/mycompany/) where I have been researching deep learning methods with a focus
-  on **Medical Image Analysis**, under supervision of Prof. Rabiee.
-  My research interests are **computer vision**, **machine learning**, **reinforcement learning**, **autonomous driving** and **AI for healthcare**.
+  My name is Alireza Dizaji and currently I am a B.Sc. student at **Sharif University of Technology**,
+  **Computer Engineering** field. My research career has begun since April 2020, when I 
+  joined the [**DML lab**](http://www.dml.ir/) focusing on the applications of deep learning
+  methods within a **computer vision** and **reinforcement learning** project, under supervision
+  of Prof. Rabiee. since April 2021, I have joined [**AI-Med company**](https://www.linkedin.com/company/aimedic/mycompany/)
+  where I have been researching deep learning methods with a focus on **Medical Image Analysis**,
+  under supervision of Prof. Rabiee. My research interests are **computer vision**, **machine learning**,
+  **reinforcement learning**, **autonomous driving** and **AI for healthcare**.
   
   
   (**this website is still under construction...**)
@@ -89,21 +91,40 @@ content:
   - title: Education
     layout: list
     content:
-      - layout: top-right
-        title: Institution name
-        sub_title: Qualifications (eg. BA Performing Arts)
-        caption: Date Range (eg. 2016 - 2019)
-        quote: >
-          Short institution or course description (optional)
+      - layout: top-left
+        title: Sharif university of Technology
+        sub_title: B.Sc. Computer Engineering
+        caption: 2017-present
+        # quote: >
+        #   Short institution or course description (optional)
         description: | # this will include new lines to allow paragraphs
-          Description of qualification
+          GPA: 17.90/20, **last six semesters: 18.51/20**
+
+          **Related courses**
+
+          Convolutional neural networks for visual recognition (audited, online Stanford),
+          machine learning (audited, online Stanford), artificial intelligence, linear algebra,
+          data structures and algorithms, introduction to bioinformatics, modern information retrieval,
+          design of algorithms, probability and statistics, discrete structures.
+      
+      - layout: top-left
+        title: Allame Amini highschool
+        sub_title: Diploma
+        caption: 2013-2017
+        # quote: >
+        #   Short institution or course description (optional)
+        description: | # this will include new lines to allow paragraphs
+          I received my Diploma in Mathematics and Physics from Allame Amini highschool,
+          where I was ranked 24th out of 350k students in Iranian nationwide mathematics
+          exam (Konkur).
+
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-      Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
-
+      Alongside my interests in science and technology, some of my other hobbies are:
+        - Reading books (Fantasy genre mostly)
+        - Watching movies
+        - Travelling and nature
 ### Footer
 footer_show_references: true
 # references_title: References on request (Override references text)
