Add education and experiences

--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,11 @@ about_content: |
   **Medical imaging**, **autonomous driving**, and bringing reasoning towards Machine learning methods
   i.e. **interpretability**.
   
-  
+more_content: |
+      Alongside my interests in science and technology, some of my other hobbies are:
+        - Reading books (Fantasy genre mostly)
+        - Watching movies
+        - Travelling and nature
 
 content:
   - title: Experience
