Fix: some issues

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -8,7 +8,7 @@
     devise a new evaluation metric to better represent the faithfulness of these explainers.
 
 
-- company: CommaMed (formed AI-Med)
+- company: CommaMed (formerly known as AI-Med)
   job_title: R&D Scientist
   dates: April 2021 - Present
   description: |
