Feature: remove journal and conferences information

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -9,7 +9,7 @@
     through mammography screening and therefore increase the survival rate of our Iranian mothers 
     and ladies. As a member of the scientific team, I have contributed to a huge project 
     containing multiple sub-branches, including pre and post-image processing, malignancy classification, and lesion segmentation,
-    using mostly weakly and semi-supervised methods due to insufficient annotated data. (In writing process to be submitted for **Radiology Journal**)
+    using mostly weakly and semi-supervised methods due to insufficient annotated data.
 
     
     <span style="color:#6b0303"> Nasrin Ahmadinejad, Nahid Sadighi, Rassa Ghavami Modegh,
