--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -12,7 +12,7 @@
 
 
 
-    <span style="color:#6b0303"> Ashkan Khakzar, **Alireza Dizaji**, Razieh Rezaei, Anees Kazi, Nassir Navab, Daniel Rueckert</span> 
+    <span style="color:#6b0303"> **Alireza Dizaji**, Razieh Rezaei, Anees Kazi, Nassir Navab, Ashkan Khakzar, Daniel Rueckert</span> 
     <br><br>
 
 
