--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ darkmode: false
 ### Social links
 github_username:  alirezadizaji
 linkedin_username: alireza-dizaji-43a634194
-
+googlescholar_username: rTdeQaMAAAAJ
 ### Additional icon links
 # additional_links:
 # - title: Link name
@@ -48,7 +48,7 @@ about_content: |
   I have +3 years of research experience in the fields of computer vision and machine learning; 
   For the last seven months, I was a research intern at the **Technical University of Munich** 
   working on explainability in graph neural networks under the co-supervision of Prof. Navab and 
-  Prof. Lueckert. For +1.5 years, I am working as an R&D scientist at AI-Med where our 
+  Prof. Rueckert. For +1.5 years, I am working as an R&D scientist at AI-Med where our 
   focus is to solve and enhance current problems of medical imaging, particularly 
   mammography screening, under the supervision of Prof. Rabiee. I also have 1-year of experience 
   in the Reinforcement Learning field working on agent movement within a maze using 
