Update: just do some fancy things :D

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -12,7 +12,7 @@
 
 
 
-    <span style="color:#6b0303"> **Alireza Dizaji**, Razieh Rezaei, Anees Kazi, Nassir Navab, Ashkan Khakzar, Daniel Rueckert</span> 
+    <span style="color:#ff8080"> **Alireza Dizaji**, Razieh Rezaei, Anees Kazi, Nassir Navab, Ashkan Khakzar, Daniel Rueckert</span> 
     <br><br>
 
 
@@ -27,7 +27,7 @@
     on many experiments passing state-of-the-art methods.
     
     
-    <span style="color:#6b0303"> Rassa Ghavami Modegh, Ahmad Salimi, **Alireza Dizaji**, Hamid R. Rabiee</span> 
+    <span style="color:#ff8080"> Rassa Ghavami Modegh, Ahmad Salimi, **Alireza Dizaji**, Hamid R. Rabiee</span> 
     <br><br>
 
 
