--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ email: alirezadizaji24@gmail.com
 # website_title: Web (Website title override)
 
 ### Dark Mode (true/false/never)
-darkmode: false
+darkmode: true
 
 ### Social links
 github_username:  alirezadizaji
