--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -12,7 +12,7 @@
     using mostly weakly and semi-supervised methods due to insufficient annotated data.
 
     
-    <span style="color:#6b0303"> Nasrin Ahmadinejad, Nahid Sadighi, Rassa Ghavami Modegh,
+    <span style="color:#ff8080"> Nasrin Ahmadinejad, Nahid Sadighi, Rassa Ghavami Modegh,
      **Alireza Dizaji**, Amin Rezaei, Maryam Rahmani, Arvin Arian, Salome Maghsudlu,
     Saeedeh Shokri, Niloofar Pashaeifakhri, Mehran Arab Ahmadi, Ali Sefidmouy, 
     Mahdi Ghaznavi, Amir Tofighi Zavareh, Hamed Dashti, Hamid R. Rabiee, Masoumeh Gity</span> 
