--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ about_profile_image: images/me.jpeg
 about_content: | 
   **CV: [PDF](https://alirezadizaji.github.io/files/CV.pdf)**
 
-  (Last updated: Dec. 2022) My name is Alireza Dizaji and I am a graduated B.Sc. student
+  (Last updated: Dec. 2022) My name is Alireza Dizaji and I have recently been graduated as a Bachelor of Science student
   at the **Sharif University of Technology**, **Computer Engineering** field. 
   I have +3 years of research experience in the fields of computer vision and machine learning; 
   For the last seven months, I was a research intern at the **Technical University of Munich** 
