--- a/_config.yml
+++ b/_config.yml
@@ -56,12 +56,12 @@ about_content: |
   **Explainable Machine Learning**, and **Optimization**.
 more_content: |
       Alongside my interests in science and technology, some of my other hobbies are:
-        - Reading books (Fantasy genre mostly): I am a big fan of Fantasy books, and mostly
-        spent my leisure time reading them. So far, I have read the <i> Hobbit </i>, <i> Lord of the Rings </i> (**My favorite one**),
-        and <i> Harry Potter </i> series in English, both significantly (mostly the first two ones) 
-        have changed my attitude towards faith, our being, and our path in our lives; 
+        - Reading books: I am a big fan of Fantasy books, and mostly
+        spent my leisure time reading them. So far, I have read the <i> Hobbit </i>, <i> Lord of the Rings </i> (**My most favorite one**),
+        and <i> Harry Potter </i> series in English, and they (particularly the second one) have significantly 
+        changed my attitude towards faith, our being, and our path in our lives; 
         Indeed after reading them, I experienced how great books could marvelously direct your thought, 
-        and I always ask for or suggest great books preferably in the fantasy genre.
+        and I always ask for or suggest such books preferably in the fantasy genre.
         - Watching movies
         - Travelling and nature
 
@@ -156,10 +156,10 @@ content:
     layout: text
     content: | 
       Alongside my interests in science and technology, some of my other hobbies are:
-        - Reading books (Fantasy genre mostly): I am a big fan of Fantasy books, and mostly
-        spent my leisure time reading them. So far, I have read the <i> Hobbit </i>, <i> Lord of the Rings </i> (**My favorite one**)
-        and <i> Harry Potter </i> series in English, both significantly (mostly the first two ones) 
-        have changed my attitude towards faith, our being, and our path in our lives; 
+        - Reading books: I am a big fan of Fantasy books, and mostly
+        spent my leisure time reading them. So far, I have read the <i> Hobbit </i>, <i> Lord of the Rings </i> (**My most favorite one**)
+        and <i> Harry Potter </i> series in English, and they (particularly the second one) have significantly 
+        changed my attitude towards faith, our being, and our path in our lives; 
         Indeed after reading them, I experienced how great books could marvelously direct your thought, 
         and I always ask for or suggest such books preferably in the fantasy genre.  
         - Watching movies
