Fix: some mistakes

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ about_profile_image: images/me.jpeg
 about_content: | 
   **CV: [PDF](https://alirezadizaji.github.io/files/CV.pdf)**
 
-  (Last updated: Dec. 2022) My name is Alireza Dizaji and I have recently graduated as a Bachelor of Science student
+  <i> (Last updated: Dec. 2022) </i> My name is Alireza Dizaji and I have recently graduated as a Bachelor of Science student
   at the **Sharif University of Technology**, **Computer Engineering** field. 
   I have +3 years of research experience in the fields of computer vision and machine learning; 
   For the last seven months, I was a research intern at the **Technical University of Munich** 
@@ -59,7 +59,7 @@ more_content: |
         - Reading books: I am a big fan of Fantasy books, and mostly
         spent my leisure time reading them. So far, I have read the <i> Hobbit </i>, <i> Lord of the Rings </i> (**My most favorite one**),
         and <i> Harry Potter </i> series in English, and they (particularly the second one) have significantly 
-        changed my attitude towards faith, our being, and our path in our lives; 
+        changed my attitude towards fate, our being, and our path in our lives; 
         Indeed after reading them, I experienced how great books could marvelously direct your thought, 
         and I always ask for or suggest such books preferably in the fantasy genre.
         - Watching movies
@@ -159,7 +159,7 @@ content:
         - Reading books: I am a big fan of Fantasy books, and mostly
         spent my leisure time reading them. So far, I have read the <i> Hobbit </i>, <i> Lord of the Rings </i> (**My most favorite one**)
         and <i> Harry Potter </i> series in English, and they (particularly the second one) have significantly 
-        changed my attitude towards faith, our being, and our path in our lives; 
+        changed my attitude towards fate, reasons behind our being, and our path in our lives; 
         Indeed after reading them, I experienced how great books could marvelously direct your thought, 
         and I always ask for or suggest such books preferably in the fantasy genre.  
         - Watching movies
