--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ more_content: |
         - Reading books: I am a big fan of Fantasy books, and mostly
         spent my leisure time reading them. So far, I have read the <i> Hobbit </i>, <i> Lord of the Rings </i> (**My most favorite one**),
         and <i> Harry Potter </i> series in English, and they (particularly the second one) have significantly 
-        changed my attitude towards fate, our being, and our path in our lives; 
+        changed my attitude towards fate, reasons behind our being, and our path in our lives; 
         Indeed after reading them, I experienced how great books could marvelously direct your thought, 
         and I always ask for or suggest such books preferably in the fantasy genre.
         - Watching movies
