Feature: new workflow to update last updated time

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,9 @@ email: alirezadizaji24@gmail.com
 ### Dark Mode (true/false/never)
 darkmode: true
 
+### Last Update Time
+last_updated_time: 13th Dec 2022
+
 ### Social links
 github_username:  alirezadizaji
 linkedin_username: alireza-dizaji-43a634194
@@ -43,7 +46,7 @@ about_profile_image: images/me.jpeg
 about_content: | 
   **CV: [PDF](https://alirezadizaji.github.io/files/CV.pdf)**
 
-  <i> (Last updated: Dec. 2022) </i> My name is Alireza Dizaji and I have recently graduated as a Bachelor of Science student
+  My name is Alireza Dizaji and I have recently graduated as a Bachelor of Science student
   at the **Sharif University of Technology**, **Computer Engineering** field. 
   I have +3 years of research experience in the fields of computer vision and machine learning; 
   For the last seven months, I was a research intern at the **Technical University of Munich** 
