--- a/.github/workflows/last_updated.yml
+++ b/.github/workflows/last_updated.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Update _config.yml
       uses: fjogeleit/yaml-update-action@v0.12.3
       with:
-        valueFile: '_config.yaml'
+        valueFile: '_config.yml'
         propertyPath: 'last_updated_time'
         value: ${{ steps.current-time.outputs.formattedTime }}
         commitChange: true
