--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ version: 1
 name: Alireza Dizaji
 email: alirezadizaji24@gmail.com
 darkmode: true
-last_updated_time: 15th Dec 2022
+last_updated_time: 13rd Dec 2022
 github_username: alirezadizaji
 linkedin_username: alireza-dizaji-43a634194
 googlescholar_username: rTdeQaMAAAAJ
