--- a/.github/workflows/last_updated.yml
+++ b/.github/workflows/last_updated.yml
@@ -15,7 +15,6 @@ jobs:
       id: current-time
       with:
         format: Do MMM YYYY
-        utcOffset: "+03:30"
     
     - name: Update _config.yml
       uses: fjogeleit/yaml-update-action@v0.12.3
@@ -23,5 +22,4 @@ jobs:
         valueFile: '_config.yml'
         propertyPath: 'last_updated_time'
         value: ${{ steps.current-time.outputs.formattedTime }}
-        commitChange: true
-        message: 'Last Time Updated.'
+        commitChange: false
