--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ repository: alirezadizaji/alirezadizaji.github.io
 version: 1
 name: Alireza Dizaji
 email: alirezadizaji24@gmail.com
+trigger_darkmode: [9,15]
 darkmode: true
 last_updated_time: 13rd Dec 2022
 github_username: alirezadizaji
