--- a/.github/workflows/trigger_dark_mode.yml
+++ b/.github/workflows/trigger_dark_mode.yml
@@ -34,7 +34,7 @@ jobs:
       HOUR: ${{ needs.init.outputs.hour }}
 
     if: ${{ $TRIGGER_TIME != null }}
-
+    steps:
     - name: Disable dark mode
       if: $ {{ $HOUR >= $TRIGGER_TIME.0 && $HOUR <= $TRIGGER_TIME.1 }}  
       uses: fjogeleit/yaml-update-action@v0.12.3
