--- a/.github/workflows/trigger_dark_mode.yml
+++ b/.github/workflows/trigger_dark_mode.yml
@@ -35,10 +35,10 @@ jobs:
       TRIGGER_TIME: ${{ needs.init.outputs.trigger_darkmode }}
       HOUR: ${{ needs.init.outputs.hour }}
 
-    if: ${{ TRIGGER_TIME != null }}
+    if: ${{ env.TRIGGER_TIME != null }}
     steps:
     - name: Disable dark mode
-      if: $ {{ $HOUR >= $TRIGGER_TIME.0 && $HOUR <= $TRIGGER_TIME.1 }}  
+      if: $ {{ env.HOUR >= env.TRIGGER_TIME.0 && env.HOUR <= env.TRIGGER_TIME.1 }}  
       uses: fjogeleit/yaml-update-action@v0.12.3
       with:
         valueFile: '_config.yml'
@@ -48,7 +48,7 @@ jobs:
         message: 'Disable Dark Mode.'
     
     - name: Enable dark mode
-      if: $ {{ $HOUR < $TRIGGER_TIME.0 || $HOUR > $TRIGGER_TIME.1 }}  
+      if: $ {{ env.HOUR < env.TRIGGER_TIME.0 || env.HOUR > env.TRIGGER_TIME.1 }}  
       uses: fjogeleit/yaml-update-action@v0.12.3
       with:
         valueFile: '_config.yml'
